@@ -1,3 +1,12 @@
+2014-09-13  Marc Glisse  <marc.glisse@inria.fr>
+
+	* mpn/generic/div_qr_1n_pi1.c: Honor NO_ASM.
+	* mpn/generic/div_qr_1n_pi2.c: Likewise.
+	* mpn/generic/div_qr_1u_pi2.c: Likewise.
+	* mpn/generic/div_qr_2.c: Likewise.
+	* mpn/generic/mod_1_1.c: Likewise.
+	* mpn/generic/redc_2.c: Likewise.
+
 2014-08-31  Torbjörn Granlund  <tege@gmplib.org>
 
 	* mpn/arm64/lshift.asm: New file.
